# padel-cv

./: .gitignore  README.md  main.py  pyproject.toml
dataset/.metadata/: a0136e6b_dataset_metadata.json
notebooks/: .gitignore  pose-mmpose.ipynb  pose-yolo.ipynb
scripts/: extract-video-clips  find-regions  join-video-clips
