[project]
name = "padel-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel<7",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pip>=25.3",
    "seaborn>=0.13.2",
    "ultralytics>=8.3.223",
]
